--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  barcode_scan: ^1.0.0
+  path_provider: ^1.4.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
