--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.2
+  firebase_analytics: ^5.0.6
+  firebase_auth: ^0.15.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
