--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.2
+  firebase_analytics: ^5.0.6
+  cloud_firestore: ^0.12.10+2
+  firebase_storage: ^3.0.8
+  image_picker: ^0.6.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
