--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive: ^1.1.1
+  hive_flutter: ^0.2.1
+  path_provider: ^1.4.5
+  hive_generator: ^0.5.2
+  build_runner:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
