--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_messaging: ^6.0.12
+  http: ^0.12.0+4
+  firebase_core: ^0.4.4+2
+  firebase_analytics: ^5.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
