--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.4+3
+  firebase_in_app_messaging: ^0.1.1+3
+  firebase_analytics: ^5.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
