--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -53,6 +53,17 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            dimension "default"
+            applicationIdSuffix ".dev"
+        }
+        prod{
+            dimension "default"
+        }
+    }
 }
 
 flutter {
