--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,17 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  chopper: ^3.0.6
-  json_annotation: ^3.1.1
   cupertino_icons: ^1.0.0
+  dio: ^3.0.10
+  json_annotation: ^3.1.1
+  retrofit: ^1.3.4+1
+  pretty_dio_logger: ^1.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
-  chopper_generator: ^3.0.6
+  build_runner: null
   json_serializable: ^3.5.1
-  
+  retrofit_generator: ^1.4.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
