--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
-  flutter_linkedin: ^1.0.2
+  flutter_facebook_login: ^3.0.0
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +41,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/logo.png
+    - assets/images/logo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
