--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_analytics: ^5.0.0
   firebase_core: ^0.5.0
   firebase_ml_vision: ^0.12.0+1
+  universal_html: ^2.0.8
 
 dev_dependencies:
   flutter_test:
